--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "@use-it/interval": "^1.0.0",
+    "core-js": "^2.6.5",
+    "dotenv": "^16.0.1",
+    "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^2.1.8",
+    "react-share": "^4.4.0",
+    "typewriter-effect": "^2.18.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
