--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,4 @@ services:
         stdin_open: true
         environment:
             - CHOKIDAR_USEPOLLING=true
-        command: npm start
+        command: serve -s build
